plugins {
	id 'org.springframework.boot' version '2.5.0'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = "11"

repositories {
	mavenCentral()
}

dependencies {
	// tag::actuator[]
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	// end::actuator[]
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// tag::tests[]
	testImplementation('org.springframework.boot:spring-boot-starter-test')
	// end::tests[]
}

test {
	useJUnitPlatform()
}
targetCompatibility = JavaVersion.VERSION_11
